# CHATDBG-Augmenting-debugging-with-LLM

./: .gitignore  README.md  ai-debug.cmd  config.example.json  package-lock.json  pyproject.toml  setup.py
Sample_code/: 1.py  Hello.java  PrimeNo.java
Sample_code/Maven-Projects-main/Maven_First_Project_Demo/: .project
Sample_code/Maven-Projects-main/Maven_First_Project_Demo/src/main/java/First_project/: Main.java
Sample_code/Maven-Projects-main/Second_Demo/: .project
Sample_code/myproject-python/: app.py  requirements.txt
Sample_code/simple-java/: Greeter.java  HelloWorld.java  Main.java
Sample_code/simple-java/com/example/: App.java
ai_debug.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ai_debug_console/: 1.py  ai_debug_console.py  debug.py  pom.xml  project_runner.py
ai_debug_console.egg-info/: PKG-INFO  SOURCES.txt
