[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-debug-console"
version = "0.1.0"
description = "AI Debug Console - run & debug single files and projects with AI assistance"
authors = [{name="You"}]
dependencies = ["google-generativeai"]
readme = "README.md"
